# minilisp

./: .gitignore  meson.build  minilisp.c  test.sh
